--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,11 +1,10 @@
-.banner{
+.banner {
     width: 100%;
-    height: auto;
-    
+    overflow: hidden; /* Prevents overflow */
 }
 
-.banner img{
-    width: 100vw;
-    height: auto;
-    object-fit:fill;
+.banner img {
+    width: 100%; /* Use 100% of the parent width */
+    height: auto; /* Maintain aspect ratio */
+    display: block; /* Remove bottom whitespace in some browsers */
 }
