--- a/src/components/Sell/SellProduct.css
+++ b/src/components/Sell/SellProduct.css
@@ -77,23 +77,7 @@
   font-size: 0.85rem;
   margin-top: 5px;
 }
-/* Back Button */
-.back-button {
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  width: 70px; /* Adjusted width */
-  height: 70px; /* Adjusted height */
-  background-color: transparent; /* Transparent background */
-  border: none;
 
-  cursor: pointer;
-}
-
-.back-button img {
-  width: 100%; /* Makes the icon fill the button */
-  height: 85%; /* Keeps the aspect ratio */
-}
 
 
 
@@ -118,3 +102,39 @@
     margin-bottom: 20px;
   }
 }
+
+/* Add to your SellProduct.css or a separate CSS file */
+.toast {
+  background-color: #333; /* Dark background */
+  color: white; /* White text */
+  padding: 10px; /* Some padding */
+  border-radius: 5px; /* Rounded corners */
+  position: fixed; /* Fixed position */
+  bottom: 20px; /* Distance from the bottom */
+  right: 20px; /* Distance from the right */
+  z-index: 9999; /* Make sure it's on top */
+  animation: fadeIn 0.5s, fadeOut 0.5s 2.5s; /* Animation for fade in/out */
+}
+
+.fade-out {
+  opacity: 0; /* Fade out */
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
